--- a/index.html
+++ b/index.html
@@ -1,11 +1,224 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ViajesCL</title>
+    <!-- Goggle Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,800" rel="stylesheet">
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/ec8701d58e.js"></script>
+    <!-- Style -->
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="icon" href="assets/img/viajes.svg" sizes="16x16" type="image/png">
+    <!-- Boostrap 4.6.0-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+        integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+
+    <title>Viajes Chile</title>
 </head>
-<body>
-    
+
+<header>
+    <nav class="navbar navbar-expand-lg navbar-dark pr-5 bg-dark">
+        <img class="imagen-viajes" src="assets/img/viajes.svg" alt="logo" class="logo-viajes">
+        <div class="texto-viajes">
+            <p>Viajes Chile</p>
+        </div>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar"
+            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse " id="navbar">
+            <div class="navbar-nav ml-auto">
+                <a class="nav-link active" aria-current="page" href="#inicio">Inicio</a>
+                <a class="nav-link active" aria-current="page" href="#quienessomos">Quienes Somos</a>
+                <a class="nav-link active" aria-current="page" href="#destacados">Destacados</a>
+                <a class="nav-link active" aria-current="page" href="#contactos">Contacto</a>
+            </div>
+        </div>
+        </div>
+    </nav>
+
+    <div id="carouselExampleIndicators" class="carousel slide carousel-fad">
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item active" style="background-image: url('assets/img/carousel1.jpg')">
+                <div class="carousel-caption d-none d-md-block">
+
+                </div>
+            </div>
+            <div class="carousel-item" style="background-image: url('assets/img/carousel2.jpg')">
+
+            </div>
+            <div class="carousel-item" style="background-image: url('assets/img/carousel3.jpg')">
+
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+</header>
+
+<section class="somos">
+    <h1 id="quienessomos">¿Quiénes somos?</h1>
+    <hr class=linea>
+    <div class="container hidden-xs d-none d-md-block">
+        <div class="row pt-5">
+            <div class="col">
+                <div class="parrafos">
+                    <section>
+                        <i class="ocultar-mostrar fas fa-plane"></i>
+                    </section>
+                    <p class="textos">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa modi quos deleniti
+                        totam, provident aspernatur soluta? Eaque, cumque illo ea aliquid rem soluta excepturi. Deserunt
+                        voluptas eveniet blanditiis possimus nemo!. Lorem, ipsum dolor sit amet consectetur adipisicing
+                        elit. Consectetur ullam magni, eaque doloribus cum tenetur itaque neque quam aspernatur delectus
+                        veritatis fuga praesentium numquam corporis eveniet, nobis, similique quis obcaecati!</p>
+                </div>
+            </div>
+            <div class="col">
+                <div class="parrafos">
+                    <p class="textos">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa modi quos deleniti
+                        totam, provident aspernatur soluta? Eaque, cumque illo ea aliquid rem soluta excepturi. Deserunt
+                        voluptas eveniet blanditiis possimus nemo! Lorem ipsum dolor sit amet consectetur adipisicing
+                        elit. Sed error, earum ipsum vero nulla minus omnis dolor quibusdam accusamus pariatur ut eum
+                        totam impedit consequatur similique dicta? Tenetur, voluptatibus inventore!</p>
+                    <section>
+                        <i class="ocultar-mostrar2 fa fa-anchor" aria-hidden="true"></i>
+                    </section>
+                </div>
+            </div>
+            <div class="col">
+                <div class="parrafos">
+                    <section>
+                        <i class="ocultar-mostrar3 fa fa-car" aria-hidden="true"></i>
+                    </section>
+                    <p class="textos">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa modi quos deleniti
+                        totam, provident aspernatur soluta? Eaque, cumque illo ea aliquid rem soluta excepturi. Deserunt
+                        voluptas eveniet blanditiis possimus nemo! Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit. Delectus dolores autem vitae voluptas optio dolor dicta itaque sed. Odio non
+                        exercitationem illo ipsum aut nihil magni omnis rem natus pariatur.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+
+    <body>
+        <h2 id="destacados" class="destacados">Destacado</h2>
+        <hr class=linea>
+        <div class="container">
+            <div class="row row-cols-1 row-cols-md-3 pt-5 test">
+                <div class="col-sm-12 col-md-3">
+                    <div class="card" style="width: 16rem;">
+                        <img class="card-img-top" src="assets/img/card1.jpg" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="titulo1" class="card-title">Disfruta</h5>
+                            <p class="texto1" class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing
+                                elit. Ducimus qui autem repudiandae mollitia quis minima, voluptate distinctio
+                                consequatur sit. Reprehenderit ducimus esse totam possimus minima autem pariatur magnam
+                                quaerat eos!</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-3">
+                    <div class="card" style="width: 16rem;">
+                        <img class="card-img-top" src="assets/img/card2.jpg" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="titulo2" class="card-title">Viaja</h5>
+                            <p class="texto2" class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing
+                                elit. Ducimus qui autem repudiandae mollitia quis minima, voluptate distinctio
+                                consequatur sit. Reprehenderit ducimus esse totam possimus minima autem pariatur magnam
+                                quaerat eos!</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-3">
+                    <div class="card" style="width: 16rem;">
+                        <img class="card-img-top" src="assets/img/card3.jpg" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="titulo3" class="card-title">Comparte</h5>
+                            <p class="texto3" class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Architecto, fuga, iusto expedita ut nulla tempore voluptatibus sed laborum deleniti esse
+                                inventore laboriosam consequatur? Aliquam, explicabo unde! Itaque ratione atque
+                                aspernatur?</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-3">
+                    <div class="card" style="width: 16rem;">
+                        <img class="card-img-top" src="assets/img/card4.jpg" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="titulo4" class="card-title">Sueña</h5>
+                            <p class="texto4" class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing
+                                elit. Ducimus qui autem repudiandae mollitia quis minima, voluptate distinctio
+                                consequatur sit. Reprehenderit ducimus esse totam possimus minima autem pariatur magnam
+                                quaerat eos!</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
+        </div>
+        <h3 id="contactos" class="contacto">Contacto</h3>
+        <hr>
+
+        <form>
+            <div class="form-group container">
+                <label for="exampleFormControlInput1">Nombre</label>
+                <input type="email" class="form-control" id="nombre" placeholder="Nombre">
+            </div>
+            <div class="form-group container">
+                <label for="exampleFormControlInput1">Email address</label>
+                <input type="email" class="form-control" id="email" placeholder="name@example.com">
+            </div>
+            <div class="form-group container">
+                <label for="exampleFormControlInput1">Asunto</label>
+                <input type="email" class="form-control" id="Asunto" placeholder="Asunto">
+            </div>
+
+            <div class="form-group container">
+                <label for="exampleFormControlTextarea1">Mensaje</label>
+                <textarea class="form-control" id="Mensaje" rows="5"></textarea>
+            </div>
+            <div class="col-auto">
+                <button id="enviarCorreo" type="button" class="btn btn-primary mb-2">Enviar</button>
+            </div>
+        </form>
+</section>
+
+
+<footer id="footer" class="container-fluid  d-md-block  bg-info section-icons fondo-footer">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-4 pagos-creditos hidden-xs">
+                <h4 id="viajes" class="pt-1 font-weight-bold" data-toggle="tooltip" data-placement="top"
+                    title="Viaja junto a con nosotros">VIAJES CHILE</h4>
+            </div>
+            <div class="col-lg-8 text-right fa-iconos-credito pt-1 foot">
+                <a href="https://github.com/Rolivarest/Prueba_viajesCL" target="_blank"><i
+                        class="fab fa-github-square fa-2x"></i></a>
+                <a href="https://www.linkedin.com" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>
+                <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square fa-2x"></i></a>
+                <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square fa-2x"></i></a>
+            </div>
+        </div>
+    </div>
+</footer>
+
+<script src="assets/js/script.js"></script>
+
 </body>
+
 </html>
